tests/negative/issue1344/U.juvix
module U;

type Unit :=
  | t : Unit;

